[package]
name = "content_moderation_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# axum = "0.7.9"
axum = "0.8.1"
chrono = {version= "0.4.40", features = ["serde"] }
clerk-rs = {version = "0.4.0" , features = ['axum']}
dotenv = "0.15.0"
dotenvy = "0.15.7"
http = "1.2.0"
log = "0.4.26"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.7.3", features = [
  "runtime-async-std-native-tls", "postgres", "chrono", "uuid", "migrate", "json", "chrono"
] }
tokio = {version= "1.43.0" , features = ['full']}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version= "1.15.1", features = ["serde"] }
